--- a/scss/blocks/_step.scss
+++ b/scss/blocks/_step.scss
@@ -44,15 +44,15 @@
     }
 
     .step1::before {
-        background-image: url("./../../images/li-1.svg");
+        background-image: url("./../images/li-1.svg");
     }
 
     .step2::before {
-        background-image: url("./../../images/li-2.svg");
+        background-image: url("./../images/li-2.svg");
     }
 
     .step3::before {
-        background-image: url("./../../images/li-3.svg");
+        background-image: url("./../images/li-3.svg");
     }
 
     &__item { 
