--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,6 +1,6 @@
 html {
     scroll-behavior: smooth;
-   overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 *,
@@ -14,7 +14,7 @@ body {
     padding: 0;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
-    font-size: 16px; 
+    font-size: 16px;
     display: flex;
     height: 100vh;
     justify-content: space-between;
@@ -23,7 +23,7 @@ body {
 }
 
 main {
-    flex-grow: 1; 
+    flex-grow: 1;
     margin-top: 77px;
 }
 
@@ -58,7 +58,13 @@ a {
     text-decoration: none;
     color: black;
 }
-a:hover{
+
+a:hover {
     color: $yellow;
     transition: all 0.5s ease;
+}
+
+a:hover {
+
+    opacity: 0.8;
 }
